test/expected/explain_atci.out
explain _Atomic(const int) x
                ^
17: error: "_Atomic" can not be of "const"
